--- a/SwampAttack/proj.ios_mac/ios/Info.plist
+++ b/SwampAttack/proj.ios_mac/ios/Info.plist
@@ -43,7 +43,7 @@
 	<array>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default</string>
 			<key>UILaunchImageOrientation</key>
@@ -53,7 +53,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default</string>
 			<key>UILaunchImageOrientation</key>
@@ -63,7 +63,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-568h</string>
 			<key>UILaunchImageOrientation</key>
@@ -73,7 +73,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-568h</string>
 			<key>UILaunchImageOrientation</key>
@@ -83,7 +83,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-667h</string>
 			<key>UILaunchImageOrientation</key>
@@ -93,7 +93,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-667h</string>
 			<key>UILaunchImageOrientation</key>
@@ -103,7 +103,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-736h</string>
 			<key>UILaunchImageOrientation</key>
@@ -113,13 +113,33 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>8.0</string>
+			<string>7.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-736h</string>
 			<key>UILaunchImageOrientation</key>
 			<string>Landscape</string>
 			<key>UILaunchImageSize</key>
 			<string>{414, 736}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>7.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-768h</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Portrait</string>
+			<key>UILaunchImageSize</key>
+			<string>{768, 1024}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>7.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-768h</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Landscape</string>
+			<key>UILaunchImageSize</key>
+			<string>{768, 1024}</string>
 		</dict>
 	</array>
 	<key>UIPrerenderedIcon</key>
