--- a/SwampAttack/proj.android/project.properties
+++ b/SwampAttack/proj.android/project.properties
@@ -10,4 +10,4 @@
 # Project target.
 target=android-20
 
-android.library.reference.1=../../../../../Downloads/UC九游单机SDK_1.4.1_3.5/03-客户端开发包/ugpsdk-integration
+android.library.reference.1=../../../../../Downloads/UC九游单机SDK_1.5.0_3.6.2/03-客户端开发包/接入包（重要）/运营商/ugpsdk-integration
