--- a/SwampAttack/proj.ios_mac/ios/Info.plist
+++ b/SwampAttack/proj.ios_mac/ios/Info.plist
@@ -14,12 +14,14 @@
 	<array>
 		<string>Icon-29</string>
 		<string>Icon-80</string>
+		<string>Icon-87</string>
 		<string>Icon-58</string>
 		<string>Icon-120</string>
 		<string>Icon.png</string>
 		<string>Icon-114.png</string>
 		<string>Icon-72.png</string>
 		<string>Icon-144.png</string>
+		<string>Icon-180.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.game.swampattack</string>
@@ -34,7 +36,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1.5</string>
+	<string>1.6</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIAppFonts</key>
@@ -43,7 +45,27 @@
 	<array>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-568</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Portrait</string>
+			<key>UILaunchImageSize</key>
+			<string>{320, 568}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>8.0</string>
+			<key>UILaunchImageName</key>
+			<string>Default-568</string>
+			<key>UILaunchImageOrientation</key>
+			<string>Landscape</string>
+			<key>UILaunchImageSize</key>
+			<string>{320, 568}</string>
+		</dict>
+		<dict>
+			<key>UILaunchImageMinimumOSVersion</key>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default</string>
 			<key>UILaunchImageOrientation</key>
@@ -53,7 +75,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default</string>
 			<key>UILaunchImageOrientation</key>
@@ -63,27 +85,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
-			<key>UILaunchImageName</key>
-			<string>Default-568h</string>
-			<key>UILaunchImageOrientation</key>
-			<string>Portrait</string>
-			<key>UILaunchImageSize</key>
-			<string>{320, 568}</string>
-		</dict>
-		<dict>
-			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
-			<key>UILaunchImageName</key>
-			<string>Default-568h</string>
-			<key>UILaunchImageOrientation</key>
-			<string>Landscape</string>
-			<key>UILaunchImageSize</key>
-			<string>{320, 568}</string>
-		</dict>
-		<dict>
-			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-667h</string>
 			<key>UILaunchImageOrientation</key>
@@ -93,7 +95,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-667h</string>
 			<key>UILaunchImageOrientation</key>
@@ -103,7 +105,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-736h</string>
 			<key>UILaunchImageOrientation</key>
@@ -113,7 +115,7 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-736h</string>
 			<key>UILaunchImageOrientation</key>
@@ -123,23 +125,23 @@
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-768h</string>
 			<key>UILaunchImageOrientation</key>
 			<string>Portrait</string>
 			<key>UILaunchImageSize</key>
-			<string>{768, 1024}</string>
+			<string>{621, 1024}</string>
 		</dict>
 		<dict>
 			<key>UILaunchImageMinimumOSVersion</key>
-			<string>7.0</string>
+			<string>8.0</string>
 			<key>UILaunchImageName</key>
 			<string>Default-768h</string>
 			<key>UILaunchImageOrientation</key>
 			<string>Landscape</string>
 			<key>UILaunchImageSize</key>
-			<string>{768, 1024}</string>
+			<string>{621, 1024}</string>
 		</dict>
 	</array>
 	<key>UIPrerenderedIcon</key>
