--- a/YohoYoho/Trailing/DoctorActionDefinition.plist
+++ b/YohoYoho/Trailing/DoctorActionDefinition.plist
@@ -290,7 +290,7 @@
 				<key>frameCount</key>
 				<integer>32</integer>
 				<key>time</key>
-				<real>1.2</real>
+				<integer>1</integer>
 			</dict>
 		</array>
 		<key>2</key>
